<resources>
    <string name="app_name">RPG Pack</string>
    <string name="hello_world">Hallo Welt!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_tools">Werkzeuge</string>
    <string name="action_character">Charakter wählen</string>
    <string name="action_edit">Editieren</string>
    <string name="action_edit_mode">Editier-Modus</string>
    <string name="action_selection_mode">Betrachten-Modus</string>
    <string name="action_show_invisible">Unsichtbare Elemente anzeigen</string>
    <string name="title_activity_alljoyn_test">Alljoyn-Test</string>
    <string name="action_main">Main</string>
    <string name="action_go_above">..</string>
    <string name="action_showlists">Zeige Liste (1. Kategorie)</string>
    <string name="choice_prompt">Wähle aus</string>
    <string name="ok">OK</string>
    <string name="empty"></string>
    <string name="name">Name</string>
    <string name="start_game">Spiel starten</string>
    <string name="load_game">Spiel laden</string>
    <string name="template_generator">Templates verwalten</string>
    <string name="manage_charackter">Charakter verwalten</string>
    <string name="settings">Einstellungen</string>
    <string name="alljoyn">Alljoyn</string>
    <string name="leave_toast">Druecke erneut Zurueck um die App zu verlassen.</string>
    <string name="tpg_actionbar_title">ABCD</string>
    <string name="template_saved">Deine Vorlage wurde erfolgreich gespeichert</string>
    <string name="template_save_error">Fehler! Vorlage konnte nicht gespeichrt werden.</string>
    <string name="btn_call_service">Dienst rufen</string>
    <string name="answer_from_service">Antwort des Dienstes</string>
    <string name="signal_from_service">Signal des Dienstes</string>
    <string-array name="spaltentypen">
        <item>Textfeld</item>
        <item>CheckBox</item>
        <item>PopUp</item>
    </string-array>
    <string name="template_generator_welcom">Willkommen im Template-Generator!\n \n Um Dein eigenes Template zu erstellen öffne einfach das Menü und lege los!</string>
    <string name="popup_titel">Item Information</string>
    <string name="menu_item_save_template">Template speichern</string>
    <string name="action_auto_save">Automatisches Speichern</string>
    <string name="title_activity_template_generator_welcome">TemplateGeneratorWelcomeActivity</string>
    <string-array name="nav_drawer_items">
        <item>Tabelle</item>
        <item>Matrix</item>
        <item>Ordner</item>
        <item>Neue Zelle hinzufügen</item>
    </string-array>
    <string name="drawer_open">Navigation öffnen</string>
    <string name="drawer_close">Navigation schließen</string>
    <string name="add_item">Speichern</string>
    <string name="save_changes">Änderungen speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="hint_matrix_item_name">Name des Elements&#8230;</string>
    <string name="hint_description_text">Dein Beschreibungstext&#8230;</string>
    <string name="hint_default_value_range_from">0</string>
    <string name="hint_default_value_range_to">100</string>
    <string name="hint_default_value_modificator">-2</string>
    <string name="hint_default_value_defvalue">50</string>
    <string name="text_default_value">Standardwert:</string>
    <string name="text_range_from">Reichweite von:</string>
    <string name="text_range_to">Reichweite bis:</string>
    <string name="text_visible">sichtbar?</string>
    <string name="text_modificator">Modifikator:</string>
    <string name="text_description">Beschreibung:</string>
    <string name="text_item_add">+</string>
    <string name="item_text">Text</string>
    <string name="modifikator">mod</string>
    <string name="from_to">von - bis</string>
    <string name="matrix_item_title">Titel</string>
    <string name="matrix_item_value">Wert</string>
    <string name="item_range">Bereich</string>
    <string name="character_icon_textview">TextView</string>
    <string name="text_create_template">Template erstellen</string>
    <string name="hint_template_name">Name des Templates&#8230;</string>
    <string name="text_add_icon">Foto hinzufügen</string>
    <string name="hint_world_name">Name der Welt&#8230;</string>
    <string name="toast_create_template_now">Erstelle nun dein Template!</string>
    <string name="toast_edit_template_now">Editiere nun dein Template!</string>
    <string name="msg_template_file_already_exists">Es existiert bereits eine Vorlage mit dem gleichem Datei Namen.</string>
    <string name="msg_yes_to_overwrite_no_to_edit">Klicke auf Ja um die Datei zu ueberschreiben oder auf Nein um den Namen zu aendern.</string>
    <string-array name="image_picker_items">
        <item>von Kamera</item>
        <item>von SD-Karte</item>
    </string-array>
    <string name="add_icon">Bild hinzufügen</string>
    <string name="warning_set_name">Dein Template braucht einen Namen!</string>
    <string name="no">Nein</string>
    <string name="yes">Ja</string>
    <string name="question_delete">Element löschen?</string>
    <string name="long_click_dialog_message">Klicke auf JA um dieses Element zu löschen</string>
    <string name="save_table">Tabelle speichern</string>
    <string name="go_back">Zurück</string>
    <string name="new_element">&#8230;</string>
    <string name="headline">Überschrift</string>
    <string name="headline1">Name</string>
    <string name="headline2">Beschreibung</string>
    <string name="blank"> - </string>
    <string name="number">Nr.</string>
    <string name="column_name">Spaltenname</string>
    <string name="column_type">Spaltentyp</string>
    <string name="dot">.</string>
    <string name="question_delete_row">Zeile löschen?</string>
    <string name="text_delete_row">Klicke auf JA um diese Zeile zu löschen</string>
    <string name="reference_inexistent"> existiert nicht</string>
    <string name="choose_reference">Wähle den zu referenzierenden Wert</string>
    <string name="no_reference">Leider kein zu referenzierender Wert gefunden</string>
    <string name="msg_delete_item">Element löschen?</string>
    <string name="new_matrix_item">Neues Element</string>
    <string name="msg_yes_to_item_delete">Klicke auf JA um dieses Element zu löschen</string>
    <string name="text_new_element">Neues Element</string>
    <string name="loading_template">Template wird geladen&#8230;</string>
    <string name="wait">Warten Sie bitte einen Moment&#8230;</string>
    <string name="loading_template_failure">Template konnte nicht geladen werden!</string>
    <string name="menu_item_save_character">Charakter speichern</string>
    <string name="char_saved">Charakter erfolgreich gespeichert.</string>
    <string name="char_save_error">Fehler! Charakter konnte nicht gespeichert werden.</string>
    <string name="question_exit">Wollen Sie den Template-Generator wirklich verlassen?</string>
    <string name="yes_and_trash">Ja und verwerfen</string>
    <string name="yes_and_save">"Ja und speichern"</string>
    <string name="edit_template">Template bearbeiten</string>
    <string name="medium_text">Mittlerer Text</string>
    <string name="popup_template_details_info_titel">Template Beschreibung</string>
    <string name="popup_template_details_tags_titel">Template Tags</string>
    <string name="action_delete_template">Template löschen</string>
    <string name="no_description_found">Keine Beschreibung gefunden</string>
    <string name="create_new_character">Charakter erstellen</string>
    <string name="lvl_label">Lvl:</string>
    <string name="change_color_label">Farbe ändern</string>
    <string name="hint_your_description">Deine Beschreibung</string>
    <string name="back">Zurück</string>
    <string name="msg_want_to_delete">Willst Du dieses Template wirklich löschen?</string>
    <string name="msg_yes_to_delete">Klicke auf JA um dieses Template zu löschen.</string>
    <string name="edit_character">Charakter bearbeiten</string>
    <string name="text_element_name">Name des Elements:</string>
    <string name="text_element_type">Typ des Elements:</string>
    <string name="text_tabelle">Tabelle</string>
    <string name="text_matrix">Matrix</string>
    <string name="text_ordner">Ordner</string>
    <string name="hint_text_element_name">Name</string>
    <string name="alert_set_element_name">Bitte trage einen Namen ein!</string>
    <string name="text_press_to_add_new_folder">Neues Element hinzufügen</string>
    <string name="text_create_your_folders_here">Erstelle hier Deine Ordner</string>
    <string name="text_columns_number">Spaltenanzahl</string>
    <string name="hint_headline">Dein Überschrift&#8230;</string>
    <string name="hint_your_notes">Deine Notizen&#8230;</string>
    <string name="msg_loading_template_list">Vorlagen werden geladen&#8230;</string>
    <string name="msg_updating_template_list">Vorlagen werden geupdated&#8230;</string>
    <string name="msg_please_wait">Einen Augenblick bitte&#8230;</string>
    <string name="row_edit_last_template">Letztes Vorlage bearbeiten&#8230;</string>
    <string name="row_create_new_template">Neues Vorlage erstellen&#8230;</string>
    <string name="menu_label_export_template">Exportiere Vorlage als Datei</string>
    <string name="menu_label_import_template">Importiere ein Vorlage aus einer Datei</string>
    <string name="toast_exported_template">Vorlage exportiert nach: %1$s</string>
    <string name="toast_exported_template_failed">Exportieren fehlgeschlagen!</string>
    <string name="toast_fileexplorer_msg_pick_folder">Bitte waehle einen Ordner.</string>
    <string name="toast_fileexplorer_msg_pick_template">Bitte waehle die Vorlage.</string>
    <string name="toast_fileexplorer_msg_pick_character">Bitte waehle den Charakter.</string>
    <string name="toast_imported_template">Vorlage importiert.</string>
    <string name="toast_imported_template_failed">Importieren fehlgeschlagen!</string>
    <string name="toast_file_is_not_template">Datei ist keine Vorlage!</string>
    <string name="toast_no_last_edited_tempalte">Keine zuletzt bearbeitete Vorlage vorhanden.</string>
    <string name="template_item_adapter_author_date_label">Von %1$s, %2$s</string>
    <string name="text_add_row"> + Zeile</string>
    <string name="text_add_column"> + Spalte</string>
    <string name="text_remove_column"> - Spalte</string>
    <string name="text_press_to_add_new_row">Neue Zeile hinzufügen</string>
    <string name="hint_set_your_description_text">Hier hast Du Platz für deine Notizen&#8230;</string>
    <string name="hint_tag_string">Durch Komma getrennte Tags&#8230;</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="save">Speichern</string>
    <string name="edit">editieren</string>
    <string name="add_d4">d4</string>
    <string name="add_d6">d6</string>
    <string name="add_d8">d8</string>
    <string name="add_d10">d10</string>
    <string name="add_d12">d12</string>
    <string name="add_d20">d20</string>
    <string name="timer_start">Start</string>
    <string name="timer_pause">Pause</string>
    <string name="add_hour">+h</string>
    <string name="add_minute">+m</string>
    <string name="add_second">+s</string>
    <string name="remove_hour">-h</string>
    <string name="remove_minute">-m</string>
    <string name="remove_second">-s</string>
    <string name="open_dice">Würfel Tool</string>
    <string name="open_timer">Timer</string>
    <string name="open_tactical">Taktische Karte</string>
    <string name="open_randomlist">Zufallsliste</string>
    <string name="search_title">Templates suchen</string>
    <string name="store_reload">Neu laden</string>
    <string name="store_tags">Tags</string>
    <string name="tag_horror">Horror</string>
    <string name="tag_fantasy">Fantasy</string>
    <string name="tag_future">Zukunft</string>
    <string name="tag_dungeon_world">Dungeon World</string>
    <string name="d_and_d">D &amp; D</string>
</resources>