<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fau.cs.mad.gamekobold.TemplateStoreMainActivity" >

    <item
        android:id="@+id/action_restore"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/store_reload" />
    <item
        android:id="@+id/action_show_tags"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/store_tags">
    	<menu>
    	    <item android:id="@+id/tag_dungeon_world"
                  android:title="@string/tag_dungeon_world"
                  />
            <item android:id="@+id/tag_d_and_d"
                  android:title="@string/d_and_d"
                  />   	    
            <item android:id="@+id/tag_horror"
                  android:title="@string/tag_horror"
                  />
            <item android:id="@+id/tag_fantasy"
                  android:title="@string/tag_fantasy"/>
            <item android:id="@+id/tag_future"
                  android:title="@string/tag_future"/>
        </menu>
     </item>
      <item android:id="@+id/search_template"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    

</menu>
