<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"  
	android:layout_height="wrap_content"
	android:background="@color/background_dark"
	android:id="@+id/dice_menu" >
	
    <item
        android:id="@+id/item_d4"
        android:title="@string/add_d4"/>
 
    <item
        android:id="@+id/item_d6"
        android:icon="@drawable/dice_6"
        android:title="@string/add_d6"/>
 
    <item
        android:id="@+id/item_d8"
        android:icon="@drawable/dice_8"
        android:title="@string/add_d8"/>
    
	<item
        android:id="@+id/item_d10"
        android:icon="@drawable/dice_10"
        android:title="@string/add_d10"/>
        
	<item
        android:id="@+id/item_d12"
        android:icon="@drawable/dice_12"
        android:title="@string/add_d12"/>
	
	<item
        android:id="@+id/item_d20"
        android:icon="@drawable/dice_20"
        android:title="@string/add_d20"/>
 
</menu>