<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fau.cs.mad.gamekobold.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/action_main" android:title="@string/action_main"></item>
    <item android:id="@+id/action_showlists" android:title="@string/action_showlists"></item>
    <item
        android:id="@+id/action_edit_mode"
        android:title="Edit"
        android:icon="@drawable/edit_icon"
        android:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_add_folder"
        android:title="Erstelle neuen Ordner"
        android:icon="@drawable/ic_menu_archive"
        android:showAsAction="ifRoom">
    </item>
    
    
<item android:id="@+id/action_go_above" android:title="@string/action_go_above"></item>


<group android:id="@+id/action_auto_save_group" android:checkableBehavior="all"><item android:id="@+id/action_save_template" android:title="@string/menu_item_save_template" android:checkable="false"></item><item android:id="@+id/action_auto_save_on_exit" android:checkable="true" android:title="@string/action_auto_save_on_exit" android:checked="false"></item></group>
    
</menu>
