<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fau.cs.mad.gamekobold.MainActivity" >

    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
        -->
    <item
        android:id="@+id/action_edit_mode"
        android:title="@string/edit"
        android:icon="@drawable/edit_icon"
        android:showAsAction="ifRoom">
    </item>
    
    <item
        android:id="@+id/action_editable_mode"
        android:title="@string/action_edit_mode"
        android:checkable="true"
        android:checked="false"/>
    
    <item
        android:id="@+id/action_save_character"
        android:checkable="false"
        android:title="@string/menu_item_save_character">
    </item>
    
</menu>
