<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark" >

    <Button
	        android:id="@+id/btn_start"
	        android:layout_width="90dp"
	        android:layout_height="45dp"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="20dip"
	        android:layout_marginLeft="20dip"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
	        android:onClick="startTimer"
	        android:text="@string/timer_start" />
    
        <Button
	        android:id="@+id/btn_stop"
	        android:layout_width="90dp"
	        android:layout_height="45dp"
	        android:layout_marginRight="20dip"
       		android:layout_alignBottom="@+id/btn_start"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
	        android:layout_alignParentRight="true"
	        android:onClick="stopTimer"
	        android:text="@string/timer_pause" />
       
        <Button
	        android:id="@+id/btn_plus_hour"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="10dp"
	        android:layout_alignBaseline="@+id/btn_plus_min"
	        android:layout_toLeftOf="@+id/btn_plus_min"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
    		android:onClick="addHour"
	        android:text="@string/add_hour" />
        
        <Button
	        android:id="@+id/btn_plus_min"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_marginTop="20dp"
	        android:layout_alignParentTop="true"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
    		android:onClick="addMin"
			android:layout_centerHorizontal="true"
	        android:text="@string/add_minute" />
        
        
        <Button
	        android:id="@+id/btn_plus_sec"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_marginLeft="10dp"
	        android:layout_alignBaseline="@+id/btn_plus_min"
	        android:layout_toRightOf="@+id/btn_plus_min"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
    		android:onClick="addSec"
	        android:text="@string/add_second" />
        
        <Button
	        android:id="@+id/btn_minus_hour"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="10dp"
	        android:layout_below="@+id/textViewTime"
	        android:layout_toLeftOf="@+id/btn_minus_min"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
    		android:onClick="removeHour"
	        android:text="@string/remove_hour" />
        
         <Button
            android:id="@+id/btn_minus_min"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textViewTime"
            android:background="@color/background_green"
            android:onClick="removeMin"
            android:layout_centerHorizontal="true"
            android:text="@string/remove_minute"
            android:textColor="@color/white" />
        
        <Button
	        android:id="@+id/btn_minus_sec"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_marginLeft="10dp"
	        android:layout_alignBaseline="@+id/btn_minus_min"
	        android:layout_toRightOf="@+id/btn_minus_min"
	        android:textColor="@color/white"
    		android:background="@color/background_green"
    		android:onClick="removeSec"
	        android:text="@string/remove_second" />
        
          <TextView  
     		android:id="@+id/textViewTime"
			android:layout_below="@+id/btn_plus_min"
     		android:textColor="@color/white"
     		android:layout_width="wrap_content"  
     		android:layout_height="wrap_content"
     		android:layout_centerHorizontal="true"  
     		android:textSize="35sp" />     
           
</RelativeLayout>
