<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_tools"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/action_tools"
          android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_editable_mode"
        android:title="@string/action_edit_mode"
        android:checkable="true"
        android:checked="false"/>
    
    <!--
    <item
        android:id="@+id/action_selection_mode"
        android:title="@string/action_selection_mode"/>
        -->
    
    <!--
    <item
        android:id="@+id/action_character"
        android:icon="@drawable/character_icon"
        android:showAsAction="ifRoom"
        android:title="@string/action_character"/>
    -->
    
	<item android:id="@+id/action_show_invisible" android:checkable="true" android:checked="false" android:title="@string/action_show_invisible"></item>

    
</menu>
